Added other Naive Bayes Classifiers

--- a/naive-bayes.ipynb
+++ b/naive-bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
     "import csv\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "\n",
-    "from sklearn.naive_bayes import MultinomialNB"
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB, BernoulliNB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gnb = GaussianNB()\n",
+    "mnb = MultinomialNB()\n",
+    "bnb = BernoulliNB()\n",
+    "\n",
+    "gnb.fit(x_train, y_train)\n",
+    "y_pred_gnb = gnb.predict(x_test)\n",
+    "\n",
+    "mnb.fit(x_train, y_train)\n",
+    "y_pred_mnb = mnb.predict(x_test)\n",
+    "\n",
+    "bnb.fit(x_train, y_train)\n",
+    "y_pred_bnb = bnb.predict(x_test)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gaussian 0.9655172413793104\n",
+      "Multinomial 0.8620689655172413\n",
+      "Bernoulli 0.8275862068965517\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Gaussian\", accuracy_score(y_test, y_pred_gnb))\n",
+    "print(\"Multinomial\", accuracy_score(y_test, y_pred_mnb))\n",
+    "print(\"Bernoulli\", accuracy_score(y_test, y_pred_bnb))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      1.00      0.96        11\n",
+      "           1       1.00      0.94      0.97        18\n",
+      "\n",
+      "    accuracy                           0.97        29\n",
+      "   macro avg       0.96      0.97      0.96        29\n",
+      "weighted avg       0.97      0.97      0.97        29\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Verdadeiro</th>\n",
+       "      <th>Previsto</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Verdadeiro  Previsto\n",
+       "0    Negativo  Negativo\n",
+       "1    Positivo  Positivo\n",
+       "2    Positivo  Positivo\n",
+       "3    Negativo  Negativo\n",
+       "4    Positivo  Positivo\n",
+       "5    Positivo  Positivo\n",
+       "6    Positivo  Negativo\n",
+       "7    Positivo  Positivo\n",
+       "8    Positivo  Positivo\n",
+       "9    Positivo  Positivo\n",
+       "10   Positivo  Positivo\n",
+       "11   Negativo  Negativo\n",
+       "12   Positivo  Positivo\n",
+       "13   Positivo  Positivo\n",
+       "14   Positivo  Positivo\n",
+       "15   Positivo  Positivo\n",
+       "16   Positivo  Positivo\n",
+       "17   Negativo  Negativo\n",
+       "18   Negativo  Negativo\n",
+       "19   Positivo  Positivo\n",
+       "20   Positivo  Positivo\n",
+       "21   Negativo  Negativo\n",
+       "22   Negativo  Negativo\n",
+       "23   Positivo  Positivo\n",
+       "24   Negativo  Negativo\n",
+       "25   Negativo  Negativo\n",
+       "26   Negativo  Negativo\n",
+       "27   Negativo  Negativo\n",
+       "28   Positivo  Positivo"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# avaliação do modelo Gaussian\n",
+    "print(classification_report(y_test, y_pred_gnb))\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred_gnb)\n",
+    "\n",
+    "# Criar um DataFrame com 16 linhas e duas colunas\n",
+    "data_gnb = {'Verdadeiro': ['Positivo' if i==1 else 'Negativo' for i in y_test], 'Previsto': ['Positivo' if i==1 else 'Negativo' for i in y_pred_gnb]}\n",
+    "df_gnb = pd.DataFrame(data_gnb)\n",
+    "display(df_gnb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -298,21 +582,257 @@
     }
    ],
    "source": [
-    "\n",
-    "mnb = MultinomialNB()\n",
-    "\n",
-    "mnb.fit(x_train, y_train)\n",
-    "y_pred_mnb = mnb.predict(x_test)\n",
-    "\n",
-    "# avaliação do modelo\n",
+    "# avaliação do modelo Multinomial\n",
     "print(classification_report(y_test, y_pred_mnb))\n",
     "conf_matrix = confusion_matrix(y_test, y_pred_mnb)\n",
     "\n",
     "# Criar um DataFrame com 16 linhas e duas colunas\n",
-    "data = {'Verdadeiro': ['Positivo' if i==1 else 'Negativo' for i in y_test], 'Previsto': ['Positivo' if i==1 else 'Negativo' for i in y_pred_mnb]}\n",
-    "df = pd.DataFrame(data)\n",
-    "display(df)\n",
-    "        "
+    "data_mnb = {'Verdadeiro': ['Positivo' if i==1 else 'Negativo' for i in y_test], 'Previsto': ['Positivo' if i==1 else 'Negativo' for i in y_pred_mnb]}\n",
+    "df_mnb = pd.DataFrame(data_mnb)\n",
+    "display(df_mnb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.69      1.00      0.81        11\n",
+      "           1       1.00      0.72      0.84        18\n",
+      "\n",
+      "    accuracy                           0.83        29\n",
+      "   macro avg       0.84      0.86      0.83        29\n",
+      "weighted avg       0.88      0.83      0.83        29\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Verdadeiro</th>\n",
+       "      <th>Previsto</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Positivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Negativo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Positivo</td>\n",
+       "      <td>Negativo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Verdadeiro  Previsto\n",
+       "0    Negativo  Negativo\n",
+       "1    Positivo  Positivo\n",
+       "2    Positivo  Negativo\n",
+       "3    Negativo  Negativo\n",
+       "4    Positivo  Positivo\n",
+       "5    Positivo  Negativo\n",
+       "6    Positivo  Negativo\n",
+       "7    Positivo  Positivo\n",
+       "8    Positivo  Negativo\n",
+       "9    Positivo  Positivo\n",
+       "10   Positivo  Positivo\n",
+       "11   Negativo  Negativo\n",
+       "12   Positivo  Positivo\n",
+       "13   Positivo  Positivo\n",
+       "14   Positivo  Positivo\n",
+       "15   Positivo  Positivo\n",
+       "16   Positivo  Positivo\n",
+       "17   Negativo  Negativo\n",
+       "18   Negativo  Negativo\n",
+       "19   Positivo  Positivo\n",
+       "20   Positivo  Positivo\n",
+       "21   Negativo  Negativo\n",
+       "22   Negativo  Negativo\n",
+       "23   Positivo  Positivo\n",
+       "24   Negativo  Negativo\n",
+       "25   Negativo  Negativo\n",
+       "26   Negativo  Negativo\n",
+       "27   Negativo  Negativo\n",
+       "28   Positivo  Negativo"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# avaliação do modelo Bernoulli\n",
+    "print(classification_report(y_test, y_pred_bnb))\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred_bnb)\n",
+    "\n",
+    "# Criar um DataFrame com 16 linhas e duas colunas\n",
+    "data_bnb = {'Verdadeiro': ['Positivo' if i==1 else 'Negativo' for i in y_test], 'Previsto': ['Positivo' if i==1 else 'Negativo' for i in y_pred_bnb]}\n",
+    "df_bnb = pd.DataFrame(data_bnb)\n",
+    "display(df_bnb)"
    ]
   }
  ],
