--- a/random-forest.ipynb
+++ b/random-forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
     "from IPython.display import display\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,20 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vetorização dos textos\n",
+    "# vetorização dos textos\n",
     "vectorizer = TfidfVectorizer()\n",
     "X = vectorizer.fit_transform(dataset)\n",
     "\n",
-    "classifier = SVC(kernel='linear')"
+    "classifier = RandomForestClassifier(n_estimators=100, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -58,12 +58,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    Negative       0.85      1.00      0.92        11\n",
-      "    Positive       1.00      0.89      0.94        18\n",
+      "    Negative       0.90      0.82      0.86        11\n",
+      "    Positive       0.89      0.94      0.92        18\n",
       "\n",
-      "    accuracy                           0.93        29\n",
-      "   macro avg       0.92      0.94      0.93        29\n",
-      "weighted avg       0.94      0.93      0.93        29\n",
+      "    accuracy                           0.90        29\n",
+      "   macro avg       0.90      0.88      0.89        29\n",
+      "weighted avg       0.90      0.90      0.90        29\n",
       "\n"
      ]
     },
@@ -88,9 +88,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Vectorized Text</th>\n",
-       "      <th>True Label</th>\n",
-       "      <th>Predicted Label</th>\n",
+       "      <th>Texto</th>\n",
+       "      <th>Verdadeiro</th>\n",
+       "      <th>Previsto</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -116,7 +116,7 @@
        "      <th>3</th>\n",
        "      <td>[and, confusing, designed, is, poorly, so, the...</td>\n",
        "      <td>Negative</td>\n",
-       "      <td>Negative</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -128,7 +128,7 @@
        "      <th>5</th>\n",
        "      <td>[love, product, this]</td>\n",
        "      <td>Positive</td>\n",
-       "      <td>Negative</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -146,7 +146,7 @@
        "      <th>8</th>\n",
        "      <td>[love, product, this]</td>\n",
        "      <td>Positive</td>\n",
-       "      <td>Negative</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -188,7 +188,7 @@
        "      <th>15</th>\n",
        "      <td>[at, food, highly, outstanding, recommended, r...</td>\n",
        "      <td>Positive</td>\n",
-       "      <td>Positive</td>\n",
+       "      <td>Negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -230,7 +230,7 @@
        "      <th>22</th>\n",
        "      <td>[and, confusing, designed, is, poorly, so, the...</td>\n",
        "      <td>Negative</td>\n",
-       "      <td>Negative</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -273,82 +273,44 @@
        "</div>"
       ],
       "text/plain": [
-       "                                      Vectorized Text True Label   \n",
-       "0                       [service, terrible, the, was]   Negative  \\\n",
-       "1   [always, good, in, it, me, mood, nostalgic, of...   Positive   \n",
-       "2   [about, at, care, customer, customers, is, out...   Positive   \n",
-       "3   [and, confusing, designed, is, poorly, so, the...   Negative   \n",
-       "4   [back, can, delicious, food, go, has, most, re...   Positive   \n",
-       "5                               [love, product, this]   Positive   \n",
-       "6   [and, found, intuitive, is, navigation, needed...   Positive   \n",
-       "7   [adrenaline, coaster, exhilarating, pure, ride...   Positive   \n",
-       "8                               [love, product, this]   Positive   \n",
-       "9   [book, feel, highly, inspired, made, me, recom...   Positive   \n",
-       "10  [at, coaster, experience, is, must, park, roll...   Positive   \n",
-       "11  [arrived, never, ordered, product, service, te...   Negative   \n",
-       "12  [absolutely, best, breathtaking, concert, ever...   Positive   \n",
-       "13         [best, had, just, life, meal, my, of, the]   Positive   \n",
-       "14  [band, can, enough, get, incredible, is, music...   Positive   \n",
-       "15  [at, food, highly, outstanding, recommended, r...   Positive   \n",
-       "16  [amazing, back, can, go, had, just, most, the,...   Positive   \n",
-       "17  [book, disappointed, ending, fell, flat, it, o...   Negative   \n",
-       "18  [and, delivery, experience, had, late, service...   Negative   \n",
-       "19  [can, incredible, it, listening, song, stop, t...   Positive   \n",
-       "20  [always, feel, go, good, in, it, me, mood, my,...   Positive   \n",
-       "21  [at, disappointing, food, not, price, restaura...   Negative   \n",
-       "22  [and, confusing, designed, is, poorly, so, the...   Negative   \n",
-       "23  [and, calming, for, is, perfect, playlist, rel...   Positive   \n",
-       "24            [customer, service, terrible, the, was]   Negative   \n",
-       "25            [customer, service, terrible, the, was]   Negative   \n",
-       "26  [at, disappointed, food, it, restaurant, taste...   Negative   \n",
-       "27  [disappointed, extremely, product, quality, th...   Negative   \n",
-       "28  [and, customer, impressed, issue, my, quick, r...   Positive   \n",
-       "\n",
-       "   Predicted Label  \n",
-       "0         Negative  \n",
-       "1         Positive  \n",
-       "2         Positive  \n",
-       "3         Negative  \n",
-       "4         Positive  \n",
-       "5         Negative  \n",
-       "6         Positive  \n",
-       "7         Positive  \n",
-       "8         Negative  \n",
-       "9         Positive  \n",
-       "10        Positive  \n",
-       "11        Negative  \n",
-       "12        Positive  \n",
-       "13        Positive  \n",
-       "14        Positive  \n",
-       "15        Positive  \n",
-       "16        Positive  \n",
-       "17        Negative  \n",
-       "18        Negative  \n",
-       "19        Positive  \n",
-       "20        Positive  \n",
-       "21        Negative  \n",
-       "22        Negative  \n",
-       "23        Positive  \n",
-       "24        Negative  \n",
-       "25        Negative  \n",
-       "26        Negative  \n",
-       "27        Negative  \n",
-       "28        Positive  "
+       "                                                Texto Verdadeiro   Previsto\n",
+       "0                       [service, terrible, the, was]   Negative   Negative\n",
+       "1   [always, good, in, it, me, mood, nostalgic, of...   Positive   Positive\n",
+       "2   [about, at, care, customer, customers, is, out...   Positive   Positive\n",
+       "3   [and, confusing, designed, is, poorly, so, the...   Negative   Positive\n",
+       "4   [back, can, delicious, food, go, has, most, re...   Positive   Positive\n",
+       "5                               [love, product, this]   Positive   Positive\n",
+       "6   [and, found, intuitive, is, navigation, needed...   Positive   Positive\n",
+       "7   [adrenaline, coaster, exhilarating, pure, ride...   Positive   Positive\n",
+       "8                               [love, product, this]   Positive   Positive\n",
+       "9   [book, feel, highly, inspired, made, me, recom...   Positive   Positive\n",
+       "10  [at, coaster, experience, is, must, park, roll...   Positive   Positive\n",
+       "11  [arrived, never, ordered, product, service, te...   Negative   Negative\n",
+       "12  [absolutely, best, breathtaking, concert, ever...   Positive   Positive\n",
+       "13         [best, had, just, life, meal, my, of, the]   Positive   Positive\n",
+       "14  [band, can, enough, get, incredible, is, music...   Positive   Positive\n",
+       "15  [at, food, highly, outstanding, recommended, r...   Positive   Negative\n",
+       "16  [amazing, back, can, go, had, just, most, the,...   Positive   Positive\n",
+       "17  [book, disappointed, ending, fell, flat, it, o...   Negative   Negative\n",
+       "18  [and, delivery, experience, had, late, service...   Negative   Negative\n",
+       "19  [can, incredible, it, listening, song, stop, t...   Positive   Positive\n",
+       "20  [always, feel, go, good, in, it, me, mood, my,...   Positive   Positive\n",
+       "21  [at, disappointing, food, not, price, restaura...   Negative   Negative\n",
+       "22  [and, confusing, designed, is, poorly, so, the...   Negative   Positive\n",
+       "23  [and, calming, for, is, perfect, playlist, rel...   Positive   Positive\n",
+       "24            [customer, service, terrible, the, was]   Negative   Negative\n",
+       "25            [customer, service, terrible, the, was]   Negative   Negative\n",
+       "26  [at, disappointed, food, it, restaurant, taste...   Negative   Negative\n",
+       "27  [disappointed, extremely, product, quality, th...   Negative   Negative\n",
+       "28  [and, customer, impressed, issue, my, quick, r...   Positive   Positive"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9310344827586207\n"
-     ]
     }
    ],
    "source": [
-    "##################### Holdout ##################\n",
+    "############# Holdout ############################\n",
     "# 30% do conjunto de dados é utilizado para os testes e 70% é utilizado para o treinamento\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, labels, test_size=0.3, random_state=42)\n",
     "\n",
@@ -357,21 +319,17 @@
     "\n",
     "# avaliação do modelo\n",
     "print(classification_report(y_test, y_pred))\n",
-    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "# Tabela com rótulos verdadeiros e previstos\n",
-    "data = {'Vectorized Text': [vectorizer.inverse_transform(x)[0] for x in x_test],\n",
-    "        'True Label': y_test, 'Predicted Label': y_pred}\n",
+    "data = {'Texto': [vectorizer.inverse_transform(x)[0] for x in x_test],\n",
+    "        'Verdadeiro': y_test, 'Previsto': y_pred}\n",
     "df = pd.DataFrame(data)\n",
-    "display(df)\n",
-    "\n",
-    "acc_score = accuracy_score(y_test, y_pred)\n",
-    "print(f'Accuracy: {acc_score}')"
+    "display(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -382,18 +340,18 @@
       "Accuracy: 1.0\n",
       "\n",
       "**********Fold 2****************\n",
-      "Accuracy: 0.8421052631578947\n",
+      "Accuracy: 0.7368421052631579\n",
       "\n",
       "**********Fold 3****************\n",
-      "Accuracy: 0.8421052631578947\n",
+      "Accuracy: 0.6842105263157895\n",
       "\n",
       "**********Fold 4****************\n",
-      "Accuracy: 1.0\n",
+      "Accuracy: 0.7368421052631579\n",
       "\n",
       "**********Fold 5****************\n",
       "Accuracy: 1.0\n",
       "\n",
-      "Average accuracy: 0.9368421052631579\n"
+      "Average accuracy: 0.8315789473684211\n"
      ]
     }
    ],
