--- a/naive-bayes.ipynb
+++ b/naive-bayes.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,15 @@
     "    y_pred = classifier.predict(x_test)\n",
     "\n",
     "    # avaliação do modelo\n",
-    "    print(classification_report(y_test, y_pred))"
+    "    print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "    acc_score = accuracy_score(y_test, y_pred)\n",
+    "    print(f'Accuracy: {acc_score}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +86,8 @@
       "    accuracy                           0.97        29\n",
       "   macro avg       0.96      0.97      0.96        29\n",
       "weighted avg       0.97      0.97      0.97        29\n",
-      "\n"
+      "\n",
+      "Accuracy: 0.9655172413793104\n"
      ]
     }
    ],
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +112,8 @@
       "    accuracy                           0.86        29\n",
       "   macro avg       0.87      0.89      0.86        29\n",
       "weighted avg       0.90      0.86      0.86        29\n",
-      "\n"
+      "\n",
+      "Accuracy: 0.8620689655172413\n"
      ]
     }
    ],
@@ -118,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +138,8 @@
       "    accuracy                           0.83        29\n",
       "   macro avg       0.84      0.86      0.83        29\n",
       "weighted avg       0.88      0.83      0.83        29\n",
-      "\n"
+      "\n",
+      "Accuracy: 0.8275862068965517\n"
      ]
     }
    ],
