--- a/random-forest.ipynb
+++ b/random-forest.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -307,6 +307,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.896551724137931\n"
+     ]
     }
    ],
    "source": [
@@ -324,7 +331,10 @@
     "data = {'Texto': [vectorizer.inverse_transform(x)[0] for x in x_test],\n",
     "        'Verdadeiro': y_test, 'Previsto': y_pred}\n",
     "df = pd.DataFrame(data)\n",
-    "display(df)"
+    "display(df)\n",
+    "\n",
+    "acc_score = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {acc_score}')"
    ]
   },
   {
